--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
             "role": "Developer"
         }
     ],
-    "minimum-stability": "stable",
+  "minimum-stability": "dev",
     "require": {},
     "autoload": {
         "psr-4": {
