--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
   "name": "yarmat/laravel-seo",
   "description": "Package for using seo fields. (Laravel, Eloquent)",
-  "version": "1.0.0",
   "keywords": [
     "laravel",
     "seo"
@@ -17,7 +16,9 @@
     }
   ],
   "minimum-stability": "stable",
-  "require": {},
+  "require": {
+    "php": ">=7.0"
+  },
   "autoload": {
     "psr-4": {
       "Yarmat\\Seo\\": "src"
